--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+}
+
+
 body {
   margin: 0;
   padding: 0;
@@ -5,7 +10,13 @@ body {
   color: seashell;
   background-color: #645986;
   background-image: url(city.jpg);
-  position: relative;
+  z-index: 1;
+  /*position: relative;*/
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  min-height: 100vh;
+  
 
   }
 
@@ -21,240 +32,300 @@ header{
   margin-bottom: 10px;
   position: fixed;
   z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /*border: 3px white solid;*/
+  min-width: 600px;
 }
 
 footer {
-  background-color: #4E0250;
-  margin-top: 600px;
-  height: 35px;
-  width: 100%;
-  opacity: .9;
   position: absolute;
   z-index: 3;
+  width: 100%;
+  min-width: 200px;
+  margin-top: 2070px;
 }
 
-header h1.logo  {
+.awaylinks {
+  background-color: #4E0250;
+  width: 100%;
+  opacity: .9;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  height: 30px;
+  top: 50%;
+
+
+}
+
+.truebottom {
+  height:  65px;
+  background-color: #645986;
+  opacity: .8;
+  text-align: center;
+}
+
+.thanks {
+  font-weight: bold;
+  padding-top: 15px;
+  opacity: 1;
+}
+
+
+header h1 {
   margin: 0;
-  font-size: 54px;
+  font-size: 44px;
   color: #fff;
   text-transform: uppercase;
   float: left;
-  margin-top: 5px;
+  display: inline-block;
+  /*border: 3px white solid;*/
+  padding-left: 20px;
+  padding-top:  10px;
+  padding-right: 10px;
+  white-space: nowrap;
+
 }
 
-header h1.logo:hover {
-  color: #fff;
-  text-decoration: none;
+nav {
+    display: inline-block;
+    /*border: 3px white solid;*/
+    overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-box-orient: vertical;
+   -webkit-line-clamp: 2; /* number of lines to show */
+   line-height: 2em;        /* fallback */
+   max-height: 4em;       /* fallback */
+
 }
+
+nav span{
+    padding: 20px 10px;
+}
+
+a {
+    color: seashell;
+    text-decoration: none;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 22px;
+    padding: 0px 10px 0px 10px;
+    font-weight: bold;
+
+}
+
+a:hover {
+  color: #8FE388;
+  text-shadow: 1px 1px gray;
+}
+
+a:active {
+  color: #4E0250;
+  text-shadow: 0px 0px #4E0250;
+}
+
 
 /*
  * Center the body content
  */
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  
+.homebox {
+  margin-top: 67px;
+  height:  450px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
-.testhome {
+div.home {
+  margin-top: 0px;
+  height:  450px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+}
+
+.home h1 {
+
+}
+
+.curvebox {
+  
   margin-top: 67px;
-  padding: 60px 0 30px 0;
-  height:  435px;
-  width: 1200px;
+  height:  450px;
+  width: 75%;
+  max-width: 925px;
   background-color: #801A86;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
   transform: skew(-11deg);
   z-index: 1;
   position: absolute;
   opacity: .9;
+  margin: auto;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  border-radius: 5px;
 }
 
-.testback {
-  z-index: 0;
-  height: 400px;
-  width: 600px;
-  position: relative;
-
-}
-
-div.home, div.about, div.eduCerts, div.skills, div.projects {
-  margin-top: 67px;
-  height:  465px;
-  width: 1200px;
-  padding: 5px 0 0px 0;
-  /*background-color: darkred;*/
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-  /*border: 3px white solid;*/
-  position: absolute;
-  z-index: 2;
-}
-
-h1 {
-  font-size: 35px;
-  margin-top: 5px;
-  margin-bottom: -10px;
-  text-align: center;
-  letter-spacing: -2px;
-  color: #8FE388;
-  text-shadow: 1px 1px gray;
-  /*border: 3px white solid;*/
-
-}
-
-h2 {
-  font-size: 3em;
-  margin-top: 40px;
-  text-align: center;
-  letter-spacing: -2px;
-}
-
-h3 {
-  font-size: 1.7em;
-  font-weight: 100;
-  margin-top: 30px;
-  text-align: center;
-  letter-spacing: -1px;
-  color: #999;
-}
-
-.menu {
-  
-  margin-top: 16px;
-  display: inline-block;
-  float: right;
-}
-
-
-.menu li {
-  display: inline;
-}
-
-.menu li + li {
-  margin-left: 35px;
-}
-
-.menu li a {
-  color: #444;
-  text-decoration: none;
-  font-size: 18px;
-  color: seashell;
-}
-
-.menu li a:hover {
-  color: #8FE388;
-  text-shadow: 1px 1px gray;
-}
-
-.menu li a:active {
-  color: #4E0250;
-  text-shadow: 0px 0px #4E0250;
-}
-
-.fmenu li a:hover {
-  color: #8FE388;
-  text-shadow: 1px 1px gray;
-}
-
-.fmenu li a:active {
-  color: #4E0250;
-  text-shadow: 0px 0px #4E0250;
-}
-
-img {
-  width: 18%;
-  height: auto;
-  margin-top: 30px;
+img.propic {
+  width: auto;
+  height: 350px;
+  margin-top: 0px;
   margin-right: 22px;
-
   border-radius: 15%;
-
-  
-  
 }
+
 
 .introduction {
+  height:  400px;
   display: flex;
   justify-content: center;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  transform: skewY(11deg)
-  margin: 0 auto;
-}
-
-.introblurbs {
-    width: 500px;
-    height: 240px;
-    padding: 5px;
-    margin: 50px 40px 10px 40px;
-    font-size: 22px;
-}
-
-/*
-Footer Menu Formatting
-*/
-
-.fmenu {
-  float: left;
-  margin-top: 8px;
-}
-
-
-.fmenu li {
-  display: inline;
-}
-
-.fmenu li + li {
-  margin-left: 300px;
-}
-
-.fmenu li a {
-  color: #444;
-  text-decoration: none;
-  text-align: center;
-  position: relative;
-  float: none;
-  top: 50%;
-  left: 50%;
-  font-size: 18px;
-  color: seashell;
-  
-}
-
-.trueBottom {
-  width: 100%;
-  height: 88px;
-  background-color: #801A86;
-  position: absolute;
-  margin-top: 30px;
-  z-index: 4;
-  opacity: .5;
-}
-
-
-/*
- * About / Edu Certs / skills Section shared CSS
- */
-
-
-
-.aboutButtonBox {
-  width: 250px;
-  height: 400px;
-  padding: 5px;
-  margin: 70px 10px 10px 40px;
+  margin: 0, auto;
   /*border: 3px white solid;*/
 }
 
-.aboutWordBox {
-  width: 825px;
+.introblurbs {
+    text-align: left;
+    width: 500px;
+    height: 340px;
+    padding: 5px;
+    margin: 0px 10px 10px 40px;
+    font-size: 22px;
+    /*border: 3px white solid;*/
+    min-width: 500px;
+}
+
+
+
+
+
+/* End of Home Page Layout  */
+
+
+/*Start Trasnisition Layout */
+
+.transitionInfoBox {
+  margin-top: 535px;
+  height:  35px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4E0250;
+  opacity: .9;
+  align-items: center;
+  justify-content: space-between;
+  /*border: 3px white solid;*/
+  min-width: 600px;
+
+}
+
+.awaylinks {
+  margin: auto;
+}
+
+.awaylinks nav span{
+  padding: 0px 150px;
+}
+
+
+
+
+
+/*End Trasnisition Layout */
+
+
+/*Start About Layout*/
+
+.aboutbox {
+  margin-top: 570px;
+  height:  500px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+div.about {
+  margin-top: 0px;
+  height:  450px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+}
+
+.about h1 {
+  font-size: 30px;
+  margin-top: 5px;
+  margin-bottom: -5px;
+  text-align: center;
+  letter-spacing: -2px;
+  color: #8FE388;
+  text-shadow: 1px 1px gray;
+  /*border: 3px white solid;*/
+}
+
+.aboutcurvebox {
+  
+  height:  450px;
+  width: 75%;
+  max-width: 925px;
+  background-color: #4E0250;
+  z-index: 2;
+  position: absolute;
+  margin: auto;
+  margin-top: 0px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  border-radius: 5px;
+
+}
+
+.aboutbackgroundbox {
+  
+  margin-top: 528px;
+  height:  500px;
+  width: 75%;
+  transform: skew(11deg);
+  background-color: #801A86;
+  z-index: 1;
+  position: absolute;
+  margin: auto;
+  opacity: .4;
+  /*border: 3px white solid;*/
+}
+
+/*about text and buttons*/
+
+.aboutButtonBox {
+  width: 225px;
+  height: 325px;
+  padding-top: 60px;
+  /*border: 3px white solid;*/
+}
+
+.aboutWordBox, .eduWordBox, .skillWordBox  {
+  text-align: left;
+  width: 675px;
   height: 400px;
   padding: 5px;
-  margin: 10px 60px 10px 20px;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: bolder;
   /*border: 3px white solid;*/ 
 }
@@ -262,9 +333,9 @@ Footer Menu Formatting
 .aboutButton{
   background-color: #58BC82; /* Green */
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 22px;
+  font-size: 18px;
   border: none;
-  width: 240px;
+  width: 200px;
   color: white;
   margin: 25px 0px;
   padding: 15px 32px 15px 32px;
@@ -288,7 +359,7 @@ Footer Menu Formatting
   box-shadow: 0 0px 0px 0 rgba(0,0,0,0.24), 0 0px 0px 0 rgba(0,0,0,0.19);
 }
 
-.aboutIntro {
+.aboutIntro, .eduIntro, .skillIntro {
   margin-top: 55px;
   margin-left: -20px;
   padding-top: 100px;
@@ -335,9 +406,63 @@ Footer Menu Formatting
   padding: 15px;
  }
 
- /*
- *  Education and Certifications
- */
+
+
+
+
+
+/*Start Education Section*/
+
+.edubox {
+  margin-top: 1070px;
+  height:  500px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+div.about {
+  margin-top: 0px;
+  height:  450px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+}
+
+.educurvebox {
+  
+  height:  450px;
+  width: 75%;
+  max-width: 925px;
+  background-color: #4E0250;
+  z-index: 2;
+  position: absolute;
+  margin: auto;
+  margin-top: 0px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  border-radius: 5px;
+}
+
+.edubackgroundbox {
+  
+  margin-top: 528px;
+  height:  500px;
+  width: 75%;
+  transform: skew(-11deg);
+  background-color: #801A86;
+  z-index: 1;
+  position: absolute;
+  margin: auto;
+  opacity: .4;
+  /*border: 3px white solid;*/
+}
 
 
 .educationSpecs {
@@ -350,14 +475,37 @@ Footer Menu Formatting
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+.allcerts{
+  padding-left: 40px;
+}
+
 .cert {
     /*border: 3px white solid;*/
     width: 30%;
-    padding-top: 80px;
-    margin: 10px;
+    padding-top: 120px;
+    padding-left: 10px;
+    margin: auto;
     border-radius: 15px;
     display: inline-block;
     }
+
+.courseList li{
+  padding-top: 12px;
+}
+
+.courseList li a{
+  font-size: 18px;
+  color: seashell;
+}
+
+.courseList li a:hover{
+  color: #58BC82;
+}
+
+.courseList li a:active{
+  color: #4E0250;
+}
+
 
 .courseList li{
   padding-top: 12px;
@@ -377,10 +525,59 @@ Footer Menu Formatting
 
 
 
+/*Skills Section Start */
 
- /*
- *  Skills
- */
+
+.skillbox {
+  margin-top: 1570px;
+  height:  500px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+div.about {
+  margin-top: 0px;
+  height:  450px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+}
+
+.skillcurvebox {
+  
+  height:  450px;
+  width: 75%;
+  max-width: 925px;
+  background-color: #4E0250;
+  z-index: 2;
+  position: absolute;
+  margin: auto;
+  margin-top: 0px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  border-radius: 5px;
+}
+
+.skillbackgroundbox {
+  
+  margin-top: 528px;
+  height:  500px;
+  width: 75%;
+  transform: skew(11deg);
+  background-color: #801A86;
+  z-index: 1;
+  position: absolute;
+  margin: auto;
+  opacity: .4;
+  /*border: 3px white solid;*/
+}
 
 .skillList {
     /*border: 3px white solid;*/
@@ -399,4 +596,194 @@ Footer Menu Formatting
     font-weight: bold;
   }
 
+/*Skills Section End */
 
+
+
+/*Minimum Screen Settings*/
+
+
+@media (max-width: 900px) {
+
+  .awaylinks nav span{
+    padding: 0px 55px;
+  }
+
+
+}
+
+
+
+
+/*Curve adjust*/
+
+@media (max-width: 1100px) {
+  
+  .curvebox {
+      margin-top: 67px;
+      height:  450px;
+      width: 95%;
+      background-color: #801A86;
+      transform: skew(0deg);
+      z-index: 1;
+      position: absolute;
+      opacity: .9;
+      margin: auto;
+  
+  }
+}
+
+
+/*Min Width settings*/
+
+@media (max-width: 900px) {
+    
+
+    img.propic {
+      display: none;
+    }
+
+    .curvebox {
+      margin-top: 67px;
+      height:  450px;
+      width: 100%;
+      background-color: #801A86;
+      transform: skew(0deg);
+      z-index: 1;
+      position: absolute;
+      opacity: .9;
+      margin: auto;
+  }
+
+.courseList li{
+  padding-top: 8px;
+}
+
+.courseList li a{
+  font-size: 16px;
+  color: seashell;
+}
+
+}
+
+@media (max-width: 900px) {
+
+  .awaylinks nav span{
+    padding: 0px 55px;
+  }
+
+
+}
+
+
+/*About Min Settings*/
+
+/*Min Width settings*/
+
+@media (max-width: 900px) {
+
+  .aboutbox {
+  margin-top: 570px;
+  height:  500px;
+  width: 100%;
+  /*border: 3px white solid;*/
+  position: absolute;
+  z-index: 2;
+
+}
+
+.aboutButtonBox {
+  width: 700px;
+  height: 50px;
+  padding-top: 3px;
+  /*border: 3px white solid;*/
+  position: absolute;
+}
+    
+.aboutWordBox, .eduWordBox {
+  text-align: left;
+  margin-top: 45px;
+  width: 90%;
+  height: 375px;
+  padding: 5px;
+  font-size: 18px;
+  font-weight: bolder;
+  /*border: 3px white solid;*/
+  position: absolute;
+  min-width: 600px;
+}
+
+
+.aboutButton{
+  background-color: #58BC82; /* Green */
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  border: none;
+  width: 200px;
+  color: white;
+  margin: 5px 0px;
+  padding: 3px 10px 3px 10px;
+  text-align: center;
+  text-decoration: none;
+  transition-duration: 0.4s;
+  border-radius: 12px;
+
+}
+
+.aboutcurvebox, .educurvebox, .skillcurvebox {
+  
+  height:  475px;
+  width: 100%;
+  background-color: #4E0250;
+  z-index: 2;
+  position: absolute;
+  margin: auto;
+  margin-top: 0px;
+}
+
+.aboutbackgroundbox, .edubackgroundbox, .skillbackgroundbox {
+  
+  margin-top: 528px;
+  height:  500px;
+  width: 100%;
+  transform: skew(0deg);
+  background-color: #801A86;
+  z-index: 1;
+  position: absolute;
+  margin: auto;
+  opacity: .4;
+  /*border: 3px white solid;*/
+}
+   
+}
+
+@media (max-width: 1200px) {
+  
+  .aboutcurvebox, .educurvebox, .skillcurvebox {
+      height:  475px;
+      width: 100%;
+      background-color: #4E0250;
+      z-index: 2;
+      position: absolute;
+      margin: auto;
+      margin-top: 0px;
+  
+  }
+
+  .aboutbackgroundbox, .edubackgroundbox, .skillbackgroundbox {
+      width: 100%;
+      transform: skew(0deg);
+  }
+}
+
+.skillList {
+    /*border: 3px white solid;*/
+    width: 43%;
+    padding-top: 10px;
+    padding-left: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
+    border-radius: 15px;
+    display: inline-block;
+
+    }
